[gd_scene load_steps=6 format=2]

[ext_resource path="res://textures/water.png" type="Texture" id=1]
[ext_resource path="res://game/water/Water.gd" type="Script" id=2]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.593596, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.753695, 0.170946 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0173423 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.422269, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.431982 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=5]
radius = 6.0

[node name="Water" type="RigidBody2D"]
z_index = -1
collision_layer = 0
collision_mask = 0
gravity_scale = 5.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.5625, 0.5625 )
texture = ExtResource( 1 )

[node name="stream" type="CPUParticles2D" parent="."]
amount = 200
lifetime = 0.8
local_coords = false
texture = ExtResource( 1 )
spread = 180.0
initial_velocity = 10.0
initial_velocity_random = 1.0
scale_amount = 0.12
scale_amount_random = 0.08
scale_amount_curve = SubResource( 2 )

[node name="splash" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.3
one_shot = true
explosiveness = 0.89
texture = ExtResource( 1 )
spread = 180.0
initial_velocity = 126.49
initial_velocity_random = 1.0
scale_amount = 0.08
scale_amount_random = 0.02
scale_amount_curve = SubResource( 3 )

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 1.3
one_shot = true

[node name="FreeTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="Area" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 517

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
shape = SubResource( 5 )

[connection signal="body_shape_entered" from="." to="." method="_on_Water_body_shape_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_over"]
[connection signal="timeout" from="FreeTimer" to="." method="_on_FreeTimer_timeout"]
[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
